--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     
+    <div class="container"> 
+      <div class="row"
+           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, maxime!</p>
+      </div>   
+    </div>    
 </body>
 </html>
