--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git VSCODE</title>
 </head>
 <body>
-    
+    <! --DIV CONTENEDOR 2-->
     <div class="container"> 
       <div class="row"
            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, maxime!</p>
